--- a/index.html
+++ b/index.html
@@ -3,3 +3,16 @@
 <ul>
   <li> <a href="https://www.toutiao.com/c/user/111326456267/#mid=1643118153914371">今日头条</a> </li>
 </ul>
+
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Content Manager</title>
+</head>
+<body>
+  <!-- Include the script that builds the page and powers Netlify CMS -->
+  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+</body>
+</html>
