--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <ul>
     <li> <a href="https://www.toutiao.com/c/user/111326456267/#mid=1643118153914371">今日头条</a> </li>
   </ul>
-  <!-- Include the script that builds the page and powers Netlify CMS -->
-  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+  <img src="https://source.unsplash.com/random/400x200" alt="" />
 </body>
 </html>
